# GAMEJAM_COLOR_2022

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: Ball.hpp  DynamicObject.hpp  End.hpp  Field.hpp  Game.hpp  Geometry.hpp  Interface.hpp  Main.hpp  Menu.hpp  Player.hpp  Random.hpp  Text.hpp  Utils.hpp
include/interfaces/: EndInterface.hpp  FieldInterface.hpp  MenuInterface.hpp
include/variables/: Color.hpp
lib/SDL2_ttf-2.0.18/x86_64-w64-mingw32/include/SDL2/: SDL_ttf.h
src/: Ball.cpp  DynamicObject.cpp  End.cpp  Field.cpp  Game.cpp  Geometry.cpp  Main.cpp  Menu.cpp  Player.cpp  Random.cpp  Text.cpp  Utils.cpp
src/interfaces/: EndInterface.cpp  FieldInterface.cpp  MenuInterface.cpp
